web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-08-29T07:13:07Z"
  generation: 3
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "2506"
  uid: f595d735-22cb-40e4-9ded-fcb94ffa4709
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synergychat-web
    spec:
      containers:
      - image: docker.io/bootdotdev/synergychat-web:latest
        imagePullPolicy: Always
        name: synergychat-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 10
  conditions:
  - lastTransitionTime: "2025-08-29T07:13:07Z"
    lastUpdateTime: "2025-08-29T07:13:26Z"
    message: ReplicaSet "synergychat-web-f765d99db" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-08-29T07:39:42Z"
    lastUpdateTime: "2025-08-29T07:39:42Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 10
  replicas: 10
  updatedReplicas: 10
